--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -221,7 +221,8 @@ body:not( .home-page ){
 #menu-wrapper{
   padding-bottom: 2em;
   // overflow: auto;
-  overflow-x: hidden;
+  // overflow-x: hidden;
+  overflow-x: visible;
   overflow-y: auto;
   top: 0;
   left: 0;
